--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 	<audio controls>
-  		<source src="Canzone.ogg" type="audio/ogg">
-  		<source src="Canzone.mp3" type="audio/mpeg">
+  		<source title="Agony" src="Canzone.ogg" type="audio/ogg">
+  		<source title="Agony" src="Canzone.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 	</audio>
 
